bk_ida/gccida/c1/get_attr_athlon_decode
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12444:1: error: must use 'enum' tag to refer to type 'attr_athlon_decode'
attr_athlon_decode  get_attr_athlon_decode( rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12457:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12459:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 12189, "get_attr_athlon_decode"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12459:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 12189, "get_attr_athlon_decode"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12664:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12668:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/insn-attrtab.c:12683:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_attr_athlon_decode/src/obj/insn-attrtab.o] Error 1
